test/fixtures/type-error/noOverload.ro
type int = ???
type float = ???

fun x(): int = 1
fun x(a: int): int = 1

export fun test(a: float): int = x(a)
